RTB.tf
resource "aws_route_table" "private" {
  vpc_id = module.vpc.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ourNAT.id
  }
}

resource "aws_route_table" "public-RTB" {
  vpc_id = module.vpc.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ourInternalGateway.id
  }
}


resource "aws_route_table_association" "private-ap-south-1a" {
  subnet_id      = aws_subnet.pvt-sub-1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-ap-south-1b" {
  subnet_id      = aws_subnet.pvt-sub-2.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "public-ap-south-1a" {
  subnet_id      = aws_subnet.pub-sub-1.id
  route_table_id = aws_route_table.public-RTB.id
}

resource "aws_route_table_association" "public-ap-south-1b" {
  subnet_id      = aws_subnet.pub-sub-2.id
  route_table_id = aws_route_table.public-RTB.id
}
